# cookiecutter-python-simple-script

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.__project_slug }}/: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  README.{{ cookiecutter.__doc_ext }}  pyproject.toml  setup.cfg
{{ cookiecutter.__project_slug }}/docs/: changelog.{{ cookiecutter.__doc_ext }}  conf.py  index.{{ cookiecutter.__doc_ext }}  license.{{ cookiecutter.__doc_ext }}  reference.{{ cookiecutter.__doc_ext }}  requirements.txt  usage.{{ cookiecutter.__doc_ext }}
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/: __init__.py  __main__.py
{{ cookiecutter.__project_slug }}/tests/: __init__.py  test_main.py
{{ cookiecutter._project_slug }}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter._project_slug }}/docs/: conf.py  index.{{ cookiecutter._doc_ext }}  usage.{{ cookiecutter._doc_ext }}
{{ cookiecutter._project_template }}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.{{ cookiecutter.docs.ext }}  README.{{ cookiecutter.docs.ext }}  __macros.jinja  pyproject.toml  setup.cfg
{{ cookiecutter._project_template }}/docs/: changelog.{{ cookiecutter.docs.ext }}  conf.py  index.{{ cookiecutter.docs.ext }}  install.{{ cookiecutter.docs.ext }}  intro.{{ cookiecutter.docs.ext }}  license.{{ cookiecutter.docs.ext }}  requirements.txt
{{ cookiecutter._project_template }}/docs/_static/: __README__
{{ cookiecutter._project_template }}/docs/_templates/autosummary/: base.rst  class.rst  module.rst
{{ cookiecutter._project_template }}/docs/reference/: index.{{ cookiecutter.docs.ext }}
{{ cookiecutter._project_template }}/docs/reference/custom/: {{ cookiecutter.project.package }}.attributes.reference  {{ cookiecutter.project.package }}.cli.functions.reference  {{ cookiecutter.project.package }}.cli.functions.summary
{{ cookiecutter._project_template }}/docs/usage/: hello.{{ cookiecutter.docs.ext }}  index.{{ cookiecutter.docs.ext }}
{{ cookiecutter._project_template }}/src/{{ cookiecutter.project.package }}/: __init__.py  __main__.py  cli.py
{{ cookiecutter._project_template }}/tests/: __init__.py  test_cli.py
{{ cookiecutter.project_slug }}/: pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/docs/: conf.py  index.{{ cookiecutter.docs_extension }}  usage.{{ cookiecutter.docs_extension }}
