[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter._project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter._project_description }}"
authors = [
    "{{ cookiecutter.author }} <{{ cookiecutter.email }}>"
]
license = "{{ cookiecutter.license }}"
readme = "README.{{ cookiecutter._doc_ext }}"

homepage = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter._project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter._project_slug }}"
documentation = "https://{{ cookiecutter._project_slug }}.readthedocs.io"

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = [
    "{{ cookiecutter._project_slug }}",
    "{{ cookiecutter._package_name }}",
]

packages = [
    { include = "{{ cookiecutter._package_name }}", from = "src" },
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
{{cookiecutter._project_slug}} = "{{cookiecutter._package_name}}.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^9.10.0"
colorama = "^0.4.4"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.4"}
darglint = "^1.5.8"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.800"
pre-commit = "^2.9.3"
Pygments = "^2.7.4"
pylint = "^2.6.0"
pytest = "^5.2"
{% if cookiecutter._use_markdown -%}
recommonmark = "^0.7.1"
{% endif %}
safety = "^1.10.3"
sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
sphinx-click = "^2.5.0"
sphinx-rtd-theme = "^0.5.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter._package_name}} "]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py39"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100
